PostServiceImpl completed